src/objects/Activation_Reward_Discount__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Activation Reward Discount for Account and Opportunity</description>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Upper_Value__c</fullName>
        <label>Upper Value</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>lower_Value__c</fullName>
        <label>lower Value</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Activation Reward Discount</label>
</CustomObject>